[gd_scene load_steps=4 format=2]

[ext_resource path="res://Benchmark.gd" type="Script" id=1]
[ext_resource path="res://Theme.theme" type="Theme" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[node name="Benchmark" type="Node2D"]
script = ExtResource( 1 )

[node name="FPS" type="Label" parent="."]
margin_left = 900.0
margin_right = 940.0
margin_bottom = 36.0
rect_min_size = Vector2( 100, 50 )
theme = ExtResource( 2 )
text = "FPS: ?"

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_top = 50
custom_constants/margin_left = 50

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2

[node name="AddNodeButton" type="Button" parent="MarginContainer/GridContainer"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
theme = ExtResource( 2 )
text = "Add Node"

[node name="NodesLabel" type="Label" parent="MarginContainer/GridContainer"]
margin_left = 220.0
margin_right = 420.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
theme = ExtResource( 2 )

[node name="AddObjectButton" type="Button" parent="MarginContainer/GridContainer"]
margin_top = 70.0
margin_right = 200.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 50 )
theme = ExtResource( 2 )
text = "Add Object"

[node name="ObjectsLabel" type="Label" parent="MarginContainer/GridContainer"]
margin_left = 220.0
margin_top = 70.0
margin_right = 420.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 50 )
theme = ExtResource( 2 )

[node name="AddResourceButton" type="Button" parent="MarginContainer/GridContainer"]
margin_top = 140.0
margin_right = 200.0
margin_bottom = 190.0
rect_min_size = Vector2( 200, 50 )
theme = ExtResource( 2 )
text = "Add Resource"

[node name="ResourcesLabel" type="Label" parent="MarginContainer/GridContainer"]
margin_left = 220.0
margin_top = 140.0
margin_right = 420.0
margin_bottom = 190.0
rect_min_size = Vector2( 200, 50 )
theme = ExtResource( 2 )

[node name="FreeNodesButton" type="Button" parent="MarginContainer/GridContainer"]
margin_top = 210.0
margin_right = 200.0
margin_bottom = 260.0
rect_min_size = Vector2( 200, 50 )
theme = ExtResource( 2 )
text = "Free Nodes"

[node name="OrphanNodesLabel" type="Label" parent="MarginContainer/GridContainer"]
margin_left = 220.0
margin_top = 210.0
margin_right = 420.0
margin_bottom = 260.0
rect_min_size = Vector2( 200, 50 )
theme = ExtResource( 2 )

[node name="Nodes" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 654.185, 173.344 )
texture = ExtResource( 3 )
[connection signal="pressed" from="MarginContainer/GridContainer/AddNodeButton" to="." method="_on_AddNodeButton_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/AddObjectButton" to="." method="_on_AddObjectButton_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/AddResourceButton" to="." method="_on_AddResourceButton_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/FreeNodesButton" to="." method="_on_FreeNodes_pressed"]
